// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterExpression allows a "distinct" modifier 1`] = `
Object {
  "$distinct": true,
  "$filterType": "of",
  "$of": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "filter",
}
`;

exports[`FilterExpression allows filtering by a list of valid courses 1`] = `
Object {
  "$distinct": false,
  "$filterType": "of",
  "$of": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "filter",
}
`;

exports[`FilterExpression allows filtering by a where-expression 1`] = `
Object {
  "$distinct": false,
  "$filterType": "where",
  "$type": "filter",
  "$where": Object {
    "$key": "dept",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "ASIAN",
  },
}
`;
